@@ -5,6 +5,8 @@ import static org.mockito.Mockito.when;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 
 import org.junit.jupiter.api.Test;
@@ -16,6 +18,7 @@ import org.sagebionetworks.repo.model.ObjectType;
 import org.sagebionetworks.repo.model.UserProfileDAO;
 import org.sagebionetworks.repo.model.dbo.file.FileHandleDao;
 import org.sagebionetworks.repo.model.file.FileHandleAssociateType;
+import org.sagebionetworks.repo.web.NotFoundException;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 
@@ -43,9 +46,36 @@ public class UserProfileFileHandleAssociationProviderTest {
 		String fileHandleId = "2";
 		String previewFileHandleId = "3";
 		when(mockUserProfileDAO.getPictureFileHandleId(userId)).thenReturn(fileHandleId);
-		when(mockFileHandleDao.getPreviewFileHandleId(fileHandleId)).thenReturn(previewFileHandleId);
-		Set<String> associated = provider.getFileHandleIdsDirectlyAssociatedWithObject(Arrays.asList(previewFileHandleId, "4"), userId);
+		when(mockFileHandleDao.getPreviewFileHandleId(fileHandleId)).thenReturn(Optional.of(previewFileHandleId));
+		
+		Set<String> associated = provider.getFileHandleIdsDirectlyAssociatedWithObject(List.of(previewFileHandleId, "4"), userId);
+		
 		assertEquals(Collections.singleton(previewFileHandleId), associated);
+	}
+	
+	@Test
+	public void testGetFileHandleIdsAssociatedWithObjectWithMissingPreview() {
+		String userId = "1";
+		String fileHandleId = "2";
+		
+		when(mockUserProfileDAO.getPictureFileHandleId(userId)).thenReturn(fileHandleId);
+		when(mockFileHandleDao.getPreviewFileHandleId(fileHandleId)).thenReturn(Optional.empty());
+		
+		Set<String> associated = provider.getFileHandleIdsDirectlyAssociatedWithObject(List.of(fileHandleId), userId);
+		
+		assertEquals(Collections.singleton(fileHandleId), associated);
+	}
+	
+	@Test
+	public void testGetFileHandleIdsAssociatedWithObjectWithFileNotFound() {
+		String userId = "1";
+		String fileHandleId = "2";
+		
+		when(mockUserProfileDAO.getPictureFileHandleId(userId)).thenThrow(NotFoundException.class);
+		
+		Set<String> associated = provider.getFileHandleIdsDirectlyAssociatedWithObject(List.of(fileHandleId), userId);
+		
+		assertEquals(Collections.emptySet(), associated);
 	}
 
 	@Test
